Fix: use unique image names and project names to avoid conflicts

--- a/apps/web-app/docker-compose.yml
+++ b/apps/web-app/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   app:
     build: .
+    image: home-page-app:latest
     container_name: home-page
     restart: unless-stopped
     networks:
