--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,5 @@ jobs:
             cd /opt/apps/home-page
             git pull origin main
             cd apps/web-app
-            docker compose down
-            docker compose up -d --build
+            docker compose -p home-page down
+            docker compose -p home-page up -d --build
