--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^12.28.1",
     "next": "16.1.4",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
