--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,10 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             cd /opt/apps/home-page
+            git checkout -- .
             git pull origin main
             cd apps/web-app
-            docker rm -f home-page 2>/dev/null || true
-            docker compose -p home-page up -d --build
+            # Build new image first (while old container still running)
+            docker compose -p home-page build
+            # Then replace container (minimal downtime)
+            docker compose -p home-page up -d --force-recreate --no-build
